--- a/Mobile/AOS/디버거_붙이기.md
+++ b/Mobile/AOS/디버거_붙이기.md
@@ -1,16 +1,24 @@
+---
+layout: page
+title: 디버거_붙이기
+description: >
+  This chapter covers the basics of content creation with Hydejack.
+hide_description: true
+sitemap: false
+---
 
 IDA
 IDA 폴더 - dbgsrv 에서 기기에 맞는 server 파일 넣어줌
 기기 shell에서 android_server64 실행 시킴
 
-![[image.png]]
+![image.png](/image/image.png)
 
 IDA 에서
 Debugger - Attach - Remote ARM Linux/Android debugger
 
-![[image (1).png]]
+![image (1).png](/image/image.png)
 
 Hostname에 기기 와이파이 IP 넣고 OK
 
-![[image (2).png]]
+![image (2).png](/image/image.png)
 
