--- a/Mobile/AOS/디버거_붙이기.md
+++ b/Mobile/AOS/디버거_붙이기.md
@@ -16,9 +16,9 @@ IDA 폴더 - dbgsrv 에서 기기에 맞는 server 파일 넣어줌
 IDA 에서
 Debugger - Attach - Remote ARM Linux/Android debugger
 
-![image (1).png](/image/image.png)
+![image (1).png](/image/image (1).png)
 
 Hostname에 기기 와이파이 IP 넣고 OK
 
-![image (2).png](/image/image.png)
+![image (2).png](/image/image (2).png)
 
