--- a/Mobile/AOS/디버거_붙이기.md
+++ b/Mobile/AOS/디버거_붙이기.md
@@ -11,14 +11,14 @@ IDA
 IDA 폴더 - dbgsrv 에서 기기에 맞는 server 파일 넣어줌
 기기 shell에서 android_server64 실행 시킴
 
-![image.png](/image/image.png)
+![디버거_붙이기1.png](/image/디버거_붙이기1.png)
 
 IDA 에서
 Debugger - Attach - Remote ARM Linux/Android debugger
 
-![image (1).png](/image/image (1).png)
+![디버거_붙이기2.png](/image/디버거_붙이기2.png)
 
 Hostname에 기기 와이파이 IP 넣고 OK
 
-![image (2).png](/image/image (2).png)
+![디버거_붙이기3.png](/image/디버거_붙이기3.png)
 
