--- a/Mobile/iOS/디버거_붙이기.md
+++ b/Mobile/iOS/디버거_붙이기.md
@@ -1,3 +1,11 @@
+---
+layout: page
+title: 디버거_붙이기_iOS
+description: >
+  This chapter covers the basics of content creation with Hydejack.
+hide_description: true
+sitemap: false
+---
 
 lldb
 
@@ -7,5 +15,5 @@ lldb
 lldb -p [pid]
 ```
 
-![[img1.daumcdn.png]]
+![img1.daumcdn.png]img1.daumcdn.png
 
