--- a/Mobile/iOS/앱_백그라운드_스냅샷.md
+++ b/Mobile/iOS/앱_백그라운드_스냅샷.md
@@ -1,3 +1,11 @@
+---
+layout: page
+title: 앱_백그라운드_스냅샷_iOS
+description: >
+  This chapter covers the basics of content creation with Hydejack.
+hide_description: true
+sitemap: false
+---
 
 ```bash
 /var/mobile/Library/Caches/Snapshots/
