--- a/OSCP/01_정찰_및_정보_수집/Service_Enumeration/NFS_(2049).md
+++ b/OSCP/01_정찰_및_정보_수집/Service_Enumeration/NFS_(2049).md
@@ -1,3 +1,11 @@
+---
+layout: page
+title: NFS_(2049)
+description: >
+  This chapter covers the basics of content creation with Hydejack.
+hide_description: true
+sitemap: false
+---
 
 # NFS (2049) 가이드
 
@@ -9,7 +17,7 @@ NFS(Network File System)는 원격 시스템의 디렉터리를 로컬 시스템
 
 - **목표:** NFS 서버가 어떤 디렉터리를 외부에 공유하고 있는지 확인합니다.
 
-```bash title="showmount - 공유 목록 확인"
+```bash
 nmap -sV --script=nfs-showmount $target -v
 
 # -e, --exports: 서버의 공유 목록(export list)을 보여줌
@@ -32,7 +40,7 @@ mkdir /mnt/nfs_share
 ```
 
 2.  **원격 공유 마운트:**
-```bash title="mount - NFS 공유 마운트"
+```bash
 # -t nfs: 파일 시스템 타입을 NFS로 지정
 # -o nolock: 파일 잠금을 사용하지 않아 구형 NFS 서버와의 호환성 문제를 줄여줌
 mount -t nfs $target:/path/to/share /mnt/nfs_share -o nolock
