--- a/OSCP/01_정찰_및_정보_수집/Service_Enumeration/RPC_(135).md
+++ b/OSCP/01_정찰_및_정보_수집/Service_Enumeration/RPC_(135).md
@@ -1,3 +1,11 @@
+---
+layout: page
+title: RPC_(135)
+description: >
+  This chapter covers the basics of content creation with Hydejack.
+hide_description: true
+sitemap: false
+---
 
 # RPC (135) 가이드
 
