--- a/OSCP/01_정찰_및_정보_수집/Service_Enumeration/SMB_(139, 445).md
+++ b/OSCP/01_정찰_및_정보_수집/Service_Enumeration/SMB_(139, 445).md
@@ -1,3 +1,11 @@
+---
+layout: page
+title: SMB_(139, 445)
+description: >
+  This chapter covers the basics of content creation with Hydejack.
+hide_description: true
+sitemap: false
+---
 
 # SMB (139, 445) 가이드
 
@@ -10,7 +18,7 @@ SMB(Server Message Block)는 Windows 환경의 핵심 파일 공유 프로토콜
 - **목표:** 서버에 어떤 공유 폴더가 있는지, 그리고 익명(Null Session)으로 접근 가능한 폴더가 있는지 확인합니다.
 - **핵심:** `READ` 권한이 있는 공유 폴더는 중요한 정보 유출의 통로가 될 수 있습니다.
 
-```bash title="smbclient - 공유 목록 확인"
+```bash
 # -L: 지정된 호스트의 공유 목록을 보여줌
 # -N: 비밀번호 없이 익명으로 접속 시도
 smbclient -L //$target/
@@ -18,14 +26,14 @@ smbclient -L //$target/
 smbclient -L //$target/ -N
 ```
 
-```bash title="smbmap - 상세한 공유 목록 및 권한 확인"
+```bash
 # -H: 호스트 주소
 smbmap -H $target
 
 smbmap -u 'anonymous' -p "" -H $target
 ```
 
-```bash title="netexec (nxc) - 다목적 SMB 열거"
+```bash
 # 가장 강력하고 추천되는 도구. 공유 폴더, 권한, OS 정보 등을 한번에 확인
 netexec smb $target
 ```
@@ -37,7 +45,7 @@ netexec smb $target
 - **목표:** SMB와 RPC 서비스를 통해 도메인 정보, 사용자 목록, OS 버전, 암호 정책 등 시스템의 상세 정보를 수집합니다.
 - **핵심 도구:** `enum4linux-ng`
 
-```bash title="enum4linux-ng - 종합 정보 열거"
+```bash
 # -A: 모든 열거 옵션을 활성화하여 종합적인 정보 수집
 enum4linux-ng -A $target | tee enum4linux.txt
 
@@ -45,17 +53,17 @@ enum4linux-ng $target | tee enum4linuxng.log
 enum4linux $target | tee enum4linux.log
 ```
 
-```bash title="Nmap 스크립트 활용"
+```bash
 # Nmap의 SMB 관련 스크립트를 사용하여 사용자, 그룹, 공유 등을 열거
 nmap -p 139,445 --script smb-enum-users,smb-enum-shares $target
 ```
 
-```bash title="Nmap Username scan"
+```bash
 nmap -sV $target$ --script smb-enum-users.nse -oN 
 nmap_smb_username_script
 ```
 
-```bash title="Nmap NSE scans"
+```bash
 nmap --script=smb-enum* --script-args=unsafe=1 -T5 $ip nmap --script=vuln* --script-args=unsafe=1 -T5 $ip
 ```
 
@@ -65,7 +73,7 @@ nmap --script=smb-enum* --script-args=unsafe=1 -T5 $ip nmap --script=vuln* --scr
 
 - **목표:** 접근 권한이 있는 공유 폴더에 접속하여 내부 파일을 확인하고, 필요한 경우 공격용 파일을 업로드/다운로드합니다.
 
-```bash title="smbclient - 공유 폴더 접속"
+```bash
 # IPC$ 공유에 익명으로 접속
 smbclient //$target/IPC$ -N
 
@@ -73,21 +81,21 @@ smbclient //$target/IPC$ -N
 smbclient //$target/Public -N
 ```
 
-```bash title="List as authenticated user"
+```bash
 smbclient -L //$target/ -U 'enterprise-security'
 ```
 
-```bash title="Login syntax"
+```bash
  smbclient -U 'enterprise-core-vn' //$target/NETLOGON
  smbclient -U 'enterprise-security' //vulnnet.local/Enterprise-Share
 ```
 
-```bash title="Logging in"
+```bash
 smbclient //$target/wwwroot
 smbclient -U '' //$target/Bob Share/
 ```
 
-```bash  title="Mount"
+```bash
 mount -t cifs \\$target\helios ./share Authenticated mount: mount -t cifs -o username=helios \\$target\helios ./share
 ```
 
@@ -106,7 +114,7 @@ mount -t cifs \\$target\helios ./share Authenticated mount: mount -t cifs -o use
 
 - **목표:** 획득한 사용자 인증 정보(ID/PW 또는 해시)를 사용하여 다시 열거를 수행하고, 이전에는 보이지 않았던 새로운 정보와 접근 가능한 공유를 찾아냅니다.
 
-```bash title="netexec - 인증된 스캔"
+```bash
 # 획득한 자격증명으로 SMB 서비스를 다시 스캔
 netexec smb $target -u <username> -p <password>
 
